# FX-MS

./: .gitignore  CLAUDE.md  Dockerfile  FX_Data_Model_ERD.drawio  FX_Smart_Routing_Architecture.drawio  MAIN_PY_UPDATE.py  Makefile  README.md  README_PRICING.md  REFERENCE_TABLES.md  ROUTE_SUMMARY.md  RouteExplorerApp.jsx  RouteNetworkExplorer.jsx  bridge_api.py  cbdc_stable_bridge.py  config.py  conversion_matrix.json  customer_tiers.json  demo_all_routes.py  demo_results.json  digital_currencies.json  digital_rails.json  fx_mcp_api_server.py  fx_mcp_client.py  fx_providers.json  github_integration.sh  main.py  multi_rail_api.py  multi_rail_engine.py  pyproject.toml  render.yaml  requirements.txt  routing_api.py  routing_config.json  routing_models.py  run_chat_tests.sh  run_demo.py  setup.py  smart_routing_engine.py  test_all_conversions.py  (+4 more)
app/: fx_mcp_api_server.py  main.py
app/api/: admin_api.py  chat_api.py  conversion.py  deals_api.py  multi_rail_api.py  pricing.py  routing_api.py  rules_api.py
app/core/: config.py  pricing_engine.py
app/data/: currencies.json  currency_markups.json  currency_pairs.json  fx_providers.json  segments.json  tiers.json
app/models/: deal.py  pricing.py  schemas.py
app/services/: admin_service.py  conversion_service.py  (+5 more)
config/: customer_tiers.json  fx_providers.json  pricing_segments.json  pricing_tiers.json  treasury_rates.json
data/: deal_audit_log.json  deals.json
fx-ui/: .env.example  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json
tests/: __init__.py  run_all_tests.py  test_pricing.py
(+37 files in other folders)
